--- a/OOP og designpatterns/OOP og designpatterns/OOP og designpatterns.csproj
+++ b/OOP og designpatterns/OOP og designpatterns/OOP og designpatterns.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Patterns\ObserverPattern.cs" />
+    <Compile Include="OOP\Polymorfi.cs" />
     <Compile Include="Patterns\BuilderPattern\ConcreteBuilder.cs" />
     <Compile Include="Patterns\BuilderPattern\IBuilder.cs" />
     <Compile Include="Patterns\ComponentPattern\ComponentThatDoesAnotherThing.cs" />
@@ -62,7 +64,7 @@
     <Compile Include="Patterns\Strategy\StrategyClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SuperClass.cs" />
+    <Compile Include="OOP\SuperClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -72,6 +74,7 @@
     <Content Include="Patterns\ComponentPattern\ComponentPattern.txt" />
     <Content Include="Patterns\Creational Designpatterns\CreationalDesign.txt" />
     <Content Include="Patterns\Strategy\StrategyPattern.txt" />
+    <Content Include="OOP\OOP og desingpatterns.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
