--- a/test og kvalitetssikring/test og kvalitetssikring/test og kvalitetssikring.csproj
+++ b/test og kvalitetssikring/test og kvalitetssikring/test og kvalitetssikring.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calculate.cs" />
+    <Compile Include="FakeClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
